// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPitchesArray correctly creates the pitches array 1`] = `
Array [
  "B8",
  "A#8",
  "A8",
  "G#8",
  "G8",
  "F#8",
  "F8",
  "E8",
  "D#8",
  "D8",
  "C#8",
  "C8",
  "B7",
  "A#7",
  "A7",
  "G#7",
  "G7",
  "F#7",
  "F7",
  "E7",
  "D#7",
  "D7",
  "C#7",
  "C7",
  "B6",
  "A#6",
  "A6",
  "G#6",
  "G6",
  "F#6",
  "F6",
  "E6",
  "D#6",
  "D6",
  "C#6",
  "C6",
  "B5",
  "A#5",
  "A5",
  "G#5",
  "G5",
  "F#5",
  "F5",
  "E5",
  "D#5",
  "D5",
  "C#5",
  "C5",
  "B4",
  "A#4",
  "A4",
  "G#4",
  "G4",
  "F#4",
  "F4",
  "E4",
  "D#4",
  "D4",
  "C#4",
  "C4",
  "B3",
  "A#3",
  "A3",
  "G#3",
  "G3",
  "F#3",
  "F3",
  "E3",
  "D#3",
  "D3",
  "C#3",
  "C3",
  "B2",
  "A#2",
  "A2",
  "G#2",
  "G2",
  "F#2",
  "F2",
  "E2",
  "D#2",
  "D2",
  "C#2",
  "C2",
  "B1",
  "A#1",
  "A1",
  "G#1",
  "G1",
  "F#1",
  "F1",
  "E1",
  "D#1",
  "D1",
  "C#1",
  "C1",
  "B0",
  "A#0",
  "A0",
  "G#0",
  "G0",
  "F#0",
  "F0",
  "E0",
  "D#0",
  "D0",
  "C#0",
  "C0",
]
`;

exports[`createTransportBarNumbersArray correctly adjusts for different sectionBars values 1`] = `
Array [
  Object {
    "barNumber": 0,
    "xPos": 0,
  },
  Object {
    "barNumber": 1,
    "xPos": 384,
  },
]
`;

exports[`createTransportBarNumbersArray correctly adjusts for different sectionStart values 1`] = `
Array [
  Object {
    "barNumber": 2,
    "xPos": 0,
  },
  Object {
    "barNumber": 3,
    "xPos": 384,
  },
  Object {
    "barNumber": 4,
    "xPos": 768,
  },
  Object {
    "barNumber": 5,
    "xPos": 1152,
  },
]
`;

exports[`createTransportBarNumbersArray correctly creates the transport bar numbers array 1`] = `
Array [
  Object {
    "barNumber": 0,
    "xPos": 0,
  },
  Object {
    "barNumber": 1,
    "xPos": 384,
  },
  Object {
    "barNumber": 2,
    "xPos": 768,
  },
  Object {
    "barNumber": 3,
    "xPos": 1152,
  },
]
`;
